environments/prod/kubernetes/services/ota/bookingdotcom-queue-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookingdotcom-queue-processor
  labels:
    app: bookingdotcom-queue-processor
    env: prod
  namespace: ota
spec:
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      name: bookingdotcom-queue-processor
      labels:
        app: bookingdotcom-queue-processor
        env: prod
      annotations:
        steblynskyi.io/inject-secret: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9464"
        steblynskyi.io/scrape: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: bookingdotcom-queue-processor
        image: steblynskyi-docker.jfrog.io/ota-bookingdotcom-queue-processor:fd81cf251
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
          limits:
            cpu: 350m
            memory: 384Mi
        ports:
          - containerPort: 9464
            name: metrics
  selector:
    matchLabels:
      app: bookingdotcom-queue-processor
