environments/prod/kubernetes/services/ota/expedia-queue-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expedia-queue-processor
  labels:
    app: expedia-queue-processor
    env: prod
  namespace: ota
spec:
  replicas: 2
  revisionHistoryLimit: 3
  template:
    metadata:
      name: expedia-queue-processor
      labels:
        app: expedia-queue-processor
      annotations:
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9464"
        steblynskyi.io/scrape: "true"
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: expedia-queue-processor
          image: steblynskyi-docker.jfrog.io/ota-expedia-queue-processor:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 120Mi
            limits:
              cpu: 150m
              memory: 350Mi
          ports:
            - containerPort: 5000
              name: http
            - containerPort: 9464
              name: metrics
      restartPolicy: Always
  selector:
    matchLabels:
      app: expedia-queue-processor
