environments/prod/kubernetes/services/ota/expedia-reservation-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expedia-reservation-poller
  labels:
    app: expedia-reservation-poller
    env: prod
  namespace: ota
spec:
  replicas: 1
  revisionHistoryLimit: 3
  template:
    metadata:
      name: expedia-reservation-poller
      labels:
        app: expedia-reservation-poller
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: expedia-reservation-poller
          image: steblynskyi-docker.jfrog.io/ota-expedia-reservation-poller:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 250Mi
      restartPolicy: Always
  selector:
    matchLabels:
      app: expedia-reservation-poller
