environments/prod/kubernetes/services/ota/verticalbooking-queue-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verticalbooking-queue-processor
  labels:
    app: verticalbooking-queue-processor
    env: prod
  namespace: ota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verticalbooking-queue-processor
  revisionHistoryLimit: 1
  template:
    metadata:
      name: verticalbooking-queue-processor
      labels:
        env: prod
        app: verticalbooking-queue-processor
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: verticalbooking-queue-processor
          image: steblynskyi-docker.jfrog.io/ota-verticalbooking-queue-processor:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
