environments/prod/kubernetes/services/ota/core-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  labels:
    app: core-api
    env: prod
  namespace: ota
spec:
  replicas: 4
  revisionHistoryLimit: 3
  template:
    metadata:
      name: core-api
      labels:
        app: core-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: core-api
          image: steblynskyi-docker.jfrog.io/ota-core-api:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 25m
              memory: 100Mi
            limits:
              cpu: 200m
              memory: 512Mi
          ports:
            - containerPort: 5000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: core-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: core-api
  namespace: ota
  labels:
    Domain: ota-core-api.steblynskyi.com
spec:
  selector:
    app: core-api
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
