environments/prod/kubernetes/services/ota/public-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-api
  labels:
    app: public-api
    env: prod
  namespace: ota
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: public-api
      labels:
        app: public-api
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: public-api
          image: steblynskyi-docker.jfrog.io/ota-api-public:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 100Mi
            limits:
              cpu: 250m
              memory: 250Mi
          ports:
            - containerPort: 5000
              name: http
      restartPolicy: Always
  selector:
    matchLabels:
      app: public-api
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: public-api
  namespace: ota
  labels:
    Domain: ota-public-api.steblynskyi.com
spec:
  selector:
    app: public-api
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
