environments/prod/kubernetes/services/ota/setup-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: setup-web
  labels:
    app: setup-web
    env: prod
  namespace: ota
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    metadata:
      name: setup-web
      labels:
        app: setup-web
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: setup-web
          image: steblynskyi-docker.jfrog.io/ota-setup-web:d77de396
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 50m
              memory: 120Mi
            limits:
              cpu: 250m
              memory: 300Mi
          ports:
            - containerPort: 8080
              name: http
          args:
            - -base-path=/setup
      restartPolicy: Always
  selector:
    matchLabels:
      app: setup-web
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: setup-web
  namespace: ota
  labels:
    Domain: ota-setup-web.steblynskyi.com
spec:
  selector:
    app: setup-web
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
  type: NodePort
