environments/prod/kubernetes/services/ota/verticalbooking-reservation-poller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: verticalbooking-reservation-poller
  labels:
    app: verticalbooking-reservation-poller
    env: prod
  namespace: ota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verticalbooking-reservation-poller
  revisionHistoryLimit: 1
  template:
    metadata:
      name: verticalbooking-reservation-poller
      labels:
        env: prod
        app: verticalbooking-reservation-poller
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: verticalbooking-reservation-poller
          image: steblynskyi-docker.jfrog.io/ota-verticalbooking-reservation-poller:fd81cf251
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 5000
              name: http
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: 200-499
  name: verticalbooking-reservation-poller
  namespace: ota
  labels:
    Domain: ota-verticalbooking-reservation-poller.steblynskyi.com
spec:
  selector:
    app: verticalbooking-reservation-poller
    env: prod
  ports:
    - port: 80
      name: http
      targetPort: 5000
      protocol: TCP
  type: NodePort
